k8s/node.deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-__CI_ENVIRONMENT_SLUG__
  namespace: ci-cd-workshop
  labels:
    app: ci-cd-workshop
    ref: __CI_ENVIRONMENT_SLUG__
    track: stable
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ci-cd-workshop
      ref: __CI_ENVIRONMENT_SLUG__
  template:
    metadata:
      labels:
        app: ci-cd-workshop
        ref: __CI_ENVIRONMENT_SLUG__
        track: stable
    spec:
      containers:
        - name: node
          image: __CI_REGISTRY_IMAGE__:__VERSION__
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
