k8s/node.service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: node-__CI_ENVIRONMENT_SLUG__
  namespace: ci-cd-workshop
  labels:
    app: ci-cd-workshop
    ref: __CI_ENVIRONMENT_SLUG__
spec:
  type: ClusterIP
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: ci-cd-workshop
    ref: __CI_ENVIRONMENT_SLUG__
